# project-lens-tauri

./: .env.example  .gitignore  CLAUDE.md  README.md  app.vue  nuxt.config.ts  package.json  vitest.config.ts
.claude/commands/: apply-review-results.md  architecture-review.md  blog.md  code-review.md  create-pull-request.md  docs-check.md  implement-task.md  plan-implement-task.md  quick-status.md  rollback-task.md  x.md
.kiro/hooks/: markdown-linter-hook.kiro.hook  steering-update-hook.kiro.hook
.kiro/steering/: communication.md  product.md  structure.md  tech.md
_docs/blog/: 2025-07-22_Vue3+TauriでユーザーフレンドリーなDockerエラーハンドリングUIを実装する.md  2025-07-24_Tauri-Nuxt3-開発サーバー起動エラーの完全解決ガイド.md
_docs/implement-tasks/: 2.2-task-logs.md  3.1-implementation-log.md  3.2-implementation-log.md  4.1-implementation-log.md  4.2-implementation-log.md  dev-server-startup-errors-fix.md
_docs/task-plans/: 3.1-task-plan.md  3.2-task-plan.md  4.1-task-plan.md  4.2-task-plan.md
_docs/x/: x.md
docs/: troubleshooting.md
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: analysis.rs  mod.rs  provider.rs  service.rs
src-tauri/src/auth/: master_password.rs  mod.rs
src-tauri/src/crypto/: mod.rs  service.rs
src-tauri/src/docker/: container.rs  mod.rs  service.rs  service_test.rs
src-tauri/src/mcp/: client.rs  mod.rs  protocol.rs  service.rs
src-tauri/src/models/: ai_analysis_test.rs  mod.rs
src-tauri/src/storage/: mod.rs  repository.rs  schema.rs  schema_test.rs  secure_repository.rs  service.rs
tests/: setup.ts
(+45 files in other folders)
