[package]
name = "project-lens"
version = "0.1.0"
description = "ProjectLens - Multiple projects, one clear view"
authors = ["ProjectLens Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "project_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# データベース関連
rusqlite = { version = "0.30.0", features = ["bundled"] }
# 暗号化関連
ring = "0.17.7"
# HTTP通信関連
reqwest = { version = "0.12.1", features = ["json"] }
# 非同期処理
tokio = { version = "1.36.0", features = ["full"] }
# エラーハンドリング
thiserror = "1.0.58"
# Docker API
bollard = "0.16.0"
# 日時処理
chrono = { version = "0.4.34", features = ["serde"] }
# 非同期トレイト
async-trait = "0.1.77"
# グローバル静的変数
lazy_static = "1.4.0"
# Base64エンコード・デコード
base64 = "0.21.0"

[dev-dependencies]
# テスト用の一時ファイル作成
tempfile = "3.8.1"

